omg/must-gather.local.4006501640973190033/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-d3f9cf59774b6757092795684cbdfa01517af1dbefa74ae6347c451dd292c7e8/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/cluster-baremetal-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-05-02T12:37:45Z"
  generation: 2
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:include.release.openshift.io/single-node-developer: {}
          f:service.beta.openshift.io/inject-cabundle: {}
      f:webhooks:
        .: {}
        k:{"name":"vprovisioning.kb.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-baremetal-operator
    operation: Update
    time: "2023-05-02T12:37:45Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"vprovisioning.kb.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-05-02T12:37:45Z"
  name: cluster-baremetal-validating-webhook-configuration
  resourceVersion: "8950"
  uid: 4bf69bd7-9f35-42bb-9dae-b310d4133dff
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJS05wSmxlWHNqSlF3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZNE16QXpNRFV5TURBZQpGdzB5TXpBMU1ESXhNakk0TXpsYUZ3MHlOVEEyTXpBeE1qSTROREJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJPRE13TXpBMU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRDFvcUZKRzAvYlU2NWxXZTVZYS9ydlRoMVdTZ0pscDdESApyM1V6OStsaER6Yk [...]
    service:
      name: cluster-baremetal-webhook-service
      namespace: openshift-machine-api
      path: /validate-metal3-io-v1alpha1-provisioning
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vprovisioning.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metal3.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionings
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
