omg/must-gather.local.4006501640973190033/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-d3f9cf59774b6757092795684cbdfa01517af1dbefa74ae6347c451dd292c7e8/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/multus.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-05-02T12:26:06Z"
  generation: 2
  labels:
    app: multus-admission-controller
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          f:app: {}
        f:ownerReferences:
          k:{"uid":"a74973fc-c074-41e2-8215-81c3454addea"}: {}
      f:webhooks:
        k:{"name":"multus-validating-config.k8s.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:service:
              f:name: {}
              f:namespace: {}
              f:path: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2023-05-02T12:26:06Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"multus-validating-config.k8s.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-05-02T12:30:00Z"
  name: multus.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: a74973fc-c074-41e2-8215-81c3454addea
  resourceVersion: "5347"
  uid: 941af29c-5a81-48fd-83ce-adb5d22d174b
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJS05wSmxlWHNqSlF3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZNE16QXpNRFV5TURBZQpGdzB5TXpBMU1ESXhNakk0TXpsYUZ3MHlOVEEyTXpBeE1qSTROREJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJPRE13TXpBMU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRDFvcUZKRzAvYlU2NWxXZTVZYS9ydlRoMVdTZ0pscDdESApyM1V6OStsaER6Yk [...]
    service:
      name: multus-admission-controller
      namespace: openshift-multus
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: multus-validating-config.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - k8s.cni.cncf.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - network-attachment-definitions
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 30
