omg/must-gather.local.4006501640973190033/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-d3f9cf59774b6757092795684cbdfa01517af1dbefa74ae6347c451dd292c7e8/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/performance-addon-operator.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-05-02T12:18:37Z"
  generation: 1766
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:include.release.openshift.io/ibm-cloud-managed: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:include.release.openshift.io/single-node-developer: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"77d6ad13-e1ab-45f9-a3c3-540f5d841b6f"}: {}
      f:webhooks:
        .: {}
        k:{"name":"vwb.performance.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-version-operator
    operation: Update
    time: "2023-05-02T12:18:37Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"vwb.performance.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-05-04T18:44:10Z"
  name: performance-addon-operator
  ownerReferences:
  - apiVersion: config.openshift.io/v1
    kind: ClusterVersion
    name: version
    uid: 77d6ad13-e1ab-45f9-a3c3-540f5d841b6f
  resourceVersion: "683868"
  uid: c8d1560a-7b72-4592-bcd1-1b37bc039989
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJS05wSmxlWHNqSlF3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZNE16QXpNRFV5TURBZQpGdzB5TXpBMU1ESXhNakk0TXpsYUZ3MHlOVEEyTXpBeE1qSTROREJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJPRE13TXpBMU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRDFvcUZKRzAvYlU2NWxXZTVZYS9ydlRoMVdTZ0pscDdESApyM1V6OStsaER6Yk [...]
    service:
      name: performance-addon-operator-service
      namespace: openshift-cluster-node-tuning-operator
      path: /validate-performance-openshift-io-v2-performanceprofile
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vwb.performance.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - performance.openshift.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - performanceprofiles
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
