omg/must-gather.local.4006501640973190033/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-d3f9cf59774b6757092795684cbdfa01517af1dbefa74ae6347c451dd292c7e8/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/prometheusrules.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-05-02T12:35:24Z"
  generation: 2
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/name: {}
      f:webhooks:
        .: {}
        k:{"name":"prometheusrules.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: operator
    operation: Update
    time: "2023-05-02T12:35:24Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"prometheusrules.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-05-02T12:35:24Z"
  name: prometheusrules.openshift.io
  resourceVersion: "6983"
  uid: 81d1fb8d-7ced-46a7-85ce-548e28f66375
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJS05wSmxlWHNqSlF3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZNE16QXpNRFV5TURBZQpGdzB5TXpBMU1ESXhNakk0TXpsYUZ3MHlOVEEyTXpBeE1qSTROREJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJPRE13TXpBMU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRDFvcUZKRzAvYlU2NWxXZTVZYS9ydlRoMVdTZ0pscDdESApyM1V6OStsaER6Yk [...]
    service:
      name: prometheus-operator-admission-webhook
      namespace: openshift-monitoring
      path: /admission-prometheusrules/validate
      port: 8443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: prometheusrules.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - prometheusrules
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
